tests/baselines/reference/genericArrayMethods1.errors.txt
genericArrayMethods1.ts(1,5): error TS2322: Type 'number[]' is not assignable to type 'string[]'.
  Type 'number' is not assignable to type 'string'.


==== genericArrayMethods1.ts (1 errors) ====
    var x:string[] =  [0,1].slice(0); // this should be an error
        ~
!!! error TS2322: Type 'number[]' is not assignable to type 'string[]'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    